--- a/style.css
+++ b/style.css
@@ -1,46 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+body{
+    width: 350px;
+    height: 220px;
+    padding-top: 15px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    margin-bottom: 30px;
+    
+    
+}
 
 .content{
-    text-align: center;
-    text-transform: lowercase;
-    color: aqua;
+border: 2px;
+background-color: green;
+border: 2px dashed red;
 }
 
-.com{
-    text-transform: capitalize;
-    color: blanchedalmond;
-}
-
-.title{
-    height: 37px;
-    color: azure;
-}
-
-.text{
-    height: 60px;
-    color: brown;
-}
-
-button{
-    color: blue;
-}
-
-.container{
-    height: 45px;
-    color:bisque;
-}
-
-.rel{
-    height: 70px;
-    color: black;
-}
-
-.css{
-    height: 80px;
-    color: cornsilk;
-}
-
-.WebStudio{
-    height: 58px;
-    color: darkseagreen;
-}
+  
